@@ -1,7 +1,16 @@
+2012-12-30	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* actors.*, gamewin.cc, npctime.cc, objs/egg.cc, usecode/intrinsics.cc:
+	  Party members no longer heal to full if knocked out when they cache out.
+	  UI_clear_item_flag no longer awakens unconscious NPCs (matches original in
+	  e.g., BG usecode 0x6bc). Fire fields no longer awaken knocked out NPCs.
+	  Mana no longer regenerates quickly for knocked out NPCs. Trying new dead
+	  body positioning method. Fixed last commit to not randomly remove the
+	  avatar's target.
+
 2012-12-30	Malignant Manor <malignantmanor@users.sourceforge.net>
 	* actors.cc, combat.cc: Have the Avatar stop attacking unconscious actors
 
-2012-12-29	Marzo Sette Torres Junior <marzojr@yahoo.com>
+2012-12-30	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* exult.cc, keyactions.*, keys.*: Walking and running keys no longer count
 	  for the purposes of skipping faces, maps and such, as they could prevent
 	  someone from ever seeing the face. Also, enforcing const-ness in KeyBinder
